<?xml version="1.0" encoding="utf-8"?>
<!--The values for the drawable items, dimen, string and color values are added in their respective folders and files.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="55sp"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center_vertical"
            android:src="@drawable/logo_icon_text" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            android:outlineAmbientShadowColor="@color/colorLightBlue"
            app:cardBackgroundColor="@color/colorBlueDark"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_border_shape_button_rounded"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorLightBlue"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_border_shape_button_rounded"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorLightBlue"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_border_shape_button_rounded"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorLightBlue"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_border_shape_button_rounded"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorLightBlue"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:padding="15dp"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/colorWhite"
                    android:textOff="OFF"
                    android:textOn="ON"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/white_border_shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>